# boring_stuff_with_python

./: .gitignore  README.md  pyproject.toml
controll_gui/: mouse_controll.py
manipulate_images/: manipulate_images.py
parsing_csv_and_json_files/: manipulate_csv_file.py  manipulate_json_file.py
parsing_csv_and_json_files/csv_files/: example.csv  exampleWithHeader.csv  output.csv
scheduling_times/: measure_time_laps.py
sending_email_and_text_messages/: quickstart.py  send_SMS.py  send_email.py
web_scraping/: controlling_browser.py  download_web_page.py  free_book.html  map_it.py  parse_html.py  search_pypi.py
web_scraping/html_files/: another_example.html
working_with_excel/: census2010.py  read_from_file.py  write_results_to_file.py
working_with_pdf_and_word/: create_word_file.py  decrypt_pdf.py  read_word_file.py
working_with_pdf_and_word/envs/: pass.env
working_with_pdf_and_word/pdf_word_files/: restyled.docx
