[tool.poetry]
name = "boring_stuff_with_python"
version = "0.1.0"
description = ""
authors = ["Kemal Diri <kemaldiri@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^5.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
