[tool.poetry]
name = "boring_stuff_with_python"
version = "0.1.0"
description = ""
authors = ["Kemal Diri <kemaldiri@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^5.4.3"
black = "^19.10b0"
pandas = "^1.0.5"
requests = "^2.24.0"
loguru = "^0.5.1"
bs4 = "^0.0.1"
selenium = "^3.141.0"
openpyxl = "^3.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
